--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>C%%Users%HP%Katalon Studio%NaanMudhalvan1%NaanMudhalvan1.prj</name>
+	<name>C%%Users%HP%Katalon Studio%NM%NM.prj</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -17,7 +17,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1718172562104</id>
+			<id>1718254517049</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -26,7 +26,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1718172562122</id>
+			<id>1718254517068</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
